--- a/index.html
+++ b/index.html
@@ -7,46 +7,7 @@
 	<meta name="author" content="Tomoyoshi Yamamoto">
 	<meta name="description" content="The official calculator for SumClone mathematics project. May crash depending on the device computing power">
 	<link rel="stylesheet" href="https://bulma.io/css/bulma-docs.min.css?v=201804181630">
-	<style>
-  html {
-    background: #f9f9f9;
-  }
-	.is-info,
-	.is-primary {
-		max-width: 300px;
-		display: block;
-		margin-bottom: 10px;
-		margin-right: auto;
-		margin-left: auto;
-	}
-  .card {
-    width: 90%;
-  }
-	.button {
-		min-width: 300px;
-	}
-
-	.card {
-		margin-top: 50px;
-		weight: 90%;
-		max-width: 500px;
-		border-radius: 6px;
-		margin-right: auto;
-		margin-left: auto;
-	}
-
-	select {
-		width: 100%;
-	}
-
-	.card-content {
-		text-align: center;
-	}
-
-	.box {
-		overflow: auto;
-	}
-	</style>
+	<link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
